# RoboLang

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  package-lock.json  package.json
crates/spanda-api/: Cargo.toml
crates/spanda-api/src/: decision_ops.rs  differentiation_ops.rs  drift_scheduler.rs  e3.rs  e4.rs  entity_mutations.rs  grpc.rs  grpc_policy.rs  handlers.rs  hri.rs  humans.rs  integrations.rs  later_differentiation_ops.rs  lib.rs  observability.rs  openapi_routes.rs  persistence.rs  plugins.rs  recovery_ops.rs  recovery_plugins.rs  report_scheduler.rs  sdk_ops.rs  server.rs  slo_burn_scheduler.rs  smart_spaces.rs  smart_spaces_panels.rs  state.rs  twin_cloud.rs  versioning.rs
crates/spanda-api/tests/: api_policy_tests.rs  audit_siem_export_test.rs  config_approval_tests.rs  decision_traces_api_tests.rs  differentiation_analytics_api_tests.rs  drift_scan_tests.rs  entity_mutation_tests.rs  grpc_live_probe.rs  grpc_tests.rs  hri_session_tests.rs  humans_api_tests.rs  later_analytics_api_tests.rs  openapi_parity_tests.rs  ota_execute_live.rs  pagerduty_webhook_test.rs  recovery_api_tests.rs  rpc_gateway_tests.rs  sdk_ops_tests.rs  slo_burn_scheduler_test.rs  smart_spaces_api_tests.rs  sre_incidents_tests.rs  tenant_persistence_tests.rs
crates/spanda-assurance/: Cargo.toml
crates/spanda-assurance/src/: certification_pack.rs  continuity.rs  continuity_checkpoint.rs  continuity_diagnostics.rs  lib.rs  recovery.rs  recovery_coverage.rs  report.rs  runtime_bridge.rs  types.rs
crates/spanda-assurance/tests/: continuity_runtime.rs  recovery_tests.rs
crates/spanda-audit/: Cargo.toml
crates/spanda-audit/src/: backend.rs  crypto.rs  lib.rs  platform_event.rs  record.rs  runtime.rs  signing.rs
crates/spanda-cli/: Cargo.toml
crates/spanda-cli/bundled-registry/: index.json
crates/spanda-cli/src/: assurance_cli.rs  certify_cli.rs  certify_pack.rs  chaos_cli.rs  config_load.rs  continuity_cli.rs  control_center_cli.rs  control_center_client.rs  decision_cli.rs  decision_runtime.rs  demo_cli.rs  deploy_ota.rs  drift_cli.rs  fault_cli.rs  generate_cli.rs  governance_cli.rs  graph_cli.rs  integrity_cli.rs  main.rs  package.rs  plugin_cli.rs  plugin_runtime.rs  readiness_cli.rs  recovery_cli.rs  replay_cli.rs  risk_cli.rs  swarm_cli.rs  tamper_cli.rs  team_cli.rs  telemetry_cli.rs  telemetry_runtime.rs  trust_cli.rs  trust_graph_cli.rs  twin_cloud_cli.rs  whatif_cli.rs
crates/spanda-cli/tests/: control_center_cli.rs  control_center_openapi_parity.rs  package_cli.rs
crates/spanda-comm/: Cargo.toml
crates/spanda-comm/src/: comm_bus_host.rs  lib.rs
crates/spanda-concurrency/: Cargo.toml
crates/spanda-concurrency/src/: lib.rs
crates/spanda-config/: Cargo.toml
crates/spanda-config/src/: config_approval.rs  config_snapshots.rs  device_identity.rs  device_operations.rs  device_pool.rs  device_tree.rs  discovery_live.rs  discovery_registry.rs  discovery_tls.rs  discovery_transport.rs  drift.rs  entity.rs  entity_overlay.rs  error.rs  human_entities.rs  human_health.rs  integration.rs  lib.rs  manifest.rs  mapping.rs  network_validation.rs  operational_drift.rs  reports.rs  resolved.rs  resolver.rs  snapshot_encryption.rs  snapshot_wire_crypto.rs
crates/spanda-config/tests/: config_tests.rs  device_pool_scale.rs  entity_tests.rs  failover_drill.rs
crates/spanda-core/: Cargo.toml  README.md
crates/spanda-core/src/: adapter_verify.rs  ai.rs  ast.rs  audit.rs  certify_prover.rs  codegen.rs  comm.rs  concurrency.rs  connectivity_positioning.rs  debug.rs  deploy_service.rs  docs.rs  error.rs  events.rs  ffi.rs  ffi_registry.rs  fleet_agent.rs  fleet_mesh.rs  fleet_orchestrator.rs  fleet_remote.rs  foundations.rs  hal.rs  hardware.rs  language_reference.rs  lexer.rs  lib.rs  lib_registry.rs  lint.rs  modules.rs  parser.rs  pretty.rs  regex_lang.rs  reliability_runtime.rs  replay.rs  robotics_platform.rs  runtime.rs  runtime_host.rs  safety.rs  scheduler.rs  security_validate.rs  (+18 more)
crates/spanda-core/tests/: certify_prover.rs  concurrency_extended.rs  connectivity_positioning.rs  enum_payloads.rs  fleet_remote.rs  foundations.rs  fusion.rs  generic_structs.rs  integration.rs  lean_core_shims.rs  p1_features.rs  p3_features.rs  phase29_verification.rs  phase30_gaps.rs  robotics_platform.rs  runtime_hardening.rs  scheduler.rs  security_comm.rs  stdlib_audit.rs  swarm_coordinator.rs  telemetry.rs  type_system.rs
crates/spanda-debug/: Cargo.toml
crates/spanda-debug/src/: lib.rs
crates/spanda-decision/: Cargo.toml
crates/spanda-decision/src/: authority.rs  consensus.rs  diagnostics.rs  enforcement.rs  engine.rs  escalation.rs  escalation_store.rs  lib.rs  nonce_cache.rs  offline.rs  policy_cache.rs  runtime_bridge.rs  security.rs  simulate.rs  trees.rs
crates/spanda-decision/tests/: attack_simulations.rs  distributed.rs  rule_enforcement.rs  stable_gaps.rs
crates/spanda-format/: Cargo.toml
crates/spanda-format/src/: pretty.rs
crates/spanda-node/: Cargo.toml
crates/spanda-node/src/: lib.rs
crates/spanda-ops/: Cargo.toml
crates/spanda-ops/src/: alerting.rs  incidents.rs  lib.rs  pagerduty.rs  sre.rs
crates/spanda-parser/: Cargo.toml
crates/spanda-parser/src/: lib.rs
crates/spanda-policy/: Cargo.toml
crates/spanda-policy/src/: lib.rs  readiness.rs  runtime.rs
crates/spanda-policy/tests/: policy_tests.rs  runtime_tests.rs
crates/spanda-providers/: Cargo.toml
crates/spanda-providers/src/: automotive_hub.rs  bootstrap.rs  iot_hub.rs  iot_live.rs  lib.rs  package_dispatch.rs  package_stubs.rs  runtime_bridge.rs
crates/spanda-providers/tests/: automotive_hub.rs  lean_core.rs
crates/spanda-recovery/: Cargo.toml
crates/spanda-recovery/src/: decision.rs  graph.rs  (+12 more)
crates/spanda-runtime/: Cargo.toml  README.md
crates/spanda-runtime-faults/: Cargo.toml
crates/spanda-safety/: Cargo.toml
crates/spanda-security/: Cargo.toml
crates/spanda-spoofing/: Cargo.toml
crates/spanda-typecheck/: Cargo.toml  README.md
crates/synapse-cli/: Cargo.toml
crates/synapse-node/: Cargo.toml
crates/synapse-wasm/: Cargo.toml
(+820 files in other folders)
