[workspace]
members = [
    "crates/spanda-core",
    "crates/spanda-package",
    "crates/spanda-cli",
    "crates/spanda-node",
    "crates/spanda-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/sujaydavalgi/Spanda"

[profile.release]
lto = true
codegen-units = 1
