[package]
name = "spanda-api"
version.workspace = true
edition = "2021"
description = "REST API v1 for Spanda Control Center — CLI parity gateway"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spanda-audit = { path = "../spanda-audit" }
spanda-config = { path = "../spanda-config" }
spanda-deploy-http = { path = "../spanda-deploy-http" }
spanda-fleet = { path = "../spanda-fleet" }
spanda-ops = { path = "../spanda-ops" }
spanda-readiness = { path = "../spanda-readiness" }
spanda-security = { path = "../spanda-security" }

[dev-dependencies]
tempfile = "3"
