[package]
name = "spanda-assurance"
version.workspace = true
edition.workspace = true
description = "Mission assurance core interfaces, data models, and static analysis for Spanda"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spanda-ast = { path = "../spanda-ast" }
spanda-capability = { path = "../spanda-capability" }
spanda-certify = { path = "../spanda-certify" }
spanda-config = { path = "../spanda-config" }
spanda-error = { path = "../spanda-error" }
spanda-hardware = { path = "../spanda-hardware" }
spanda-readiness = { path = "../spanda-readiness" }
spanda-runtime = { path = "../spanda-runtime" }
spanda-trust = { path = "../spanda-trust" }

[features]
certify-runtime = []

[dev-dependencies]
spanda-interpreter = { path = "../spanda-interpreter" }
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
