[package]
name = "spanda-audit"
version = "0.1.0"
edition = "2021"
description = "Audit, provenance, and ledger backend abstractions for Spanda"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
