[package]
name = "spanda-cli"
version = "0.1.0"
edition = "2021"
description = "Spanda native CLI (check / run / sim with JSON output)"

[[bin]]
name = "spanda"
path = "src/main.rs"

[dependencies]
spanda-core = { path = "../spanda-core" }
spanda-package = { path = "../spanda-package" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
