[package]
name = "spanda-comm"
version.workspace = true
edition.workspace = true
description = "Spanda communication bus trait, in-memory transport, and comm safety helpers"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
spanda-ast = { path = "../spanda-ast" }
spanda-runtime = { path = "../spanda-runtime" }
spanda-typecheck = { path = "../spanda-typecheck" }
