[package]
name = "spanda-config"
version.workspace = true
edition = "2021"
description = "Cascading TOML configuration resolution, device tree, and validation for Spanda autonomous systems"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
spanda-hardware = { path = "../spanda-hardware" }
spanda-certify = { path = "../spanda-certify" }
spanda-package = { path = "../spanda-package" }
spanda-ast = { path = "../spanda-ast" }
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
