[package]
name = "spanda-format"
version.workspace = true
edition.workspace = true
description = "Spanda source formatter and pretty-printer"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
spanda-ast = { path = "../spanda-ast" }
spanda-error = { path = "../spanda-error" }
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }

[dev-dependencies]
spanda-driver = { path = "../spanda-driver" }
