[package]
name = "spanda-node"
version = "0.1.0"
edition = "2021"
description = "Node.js N-API bindings for Spanda core"

[lib]
crate-type = ["cdylib"]

[dependencies]
spanda-driver = { path = "../spanda-driver" }
spanda-core = { path = "../spanda-core", default-features = false }
spanda-error = { path = "../spanda-error" }
spanda-format = { path = "../spanda-format" }
spanda-hardware = { path = "../spanda-hardware" }
napi = { version = "2", features = ["serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"
