[package]
name = "spanda-policy"
version.workspace = true
edition.workspace = true
description = "Operational policy evaluation for Spanda programs"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
spanda-ast = { path = "../spanda-ast" }
spanda-readiness = { path = "../spanda-readiness" }

[dev-dependencies]
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
