[package]
name = "spanda-recovery"
version.workspace = true
edition.workspace = true
description = "Recovery Orchestrator — platform-wide recovery planning, coordination, validation, and audit"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
spanda-assurance = { path = "../spanda-assurance" }
spanda-ast = { path = "../spanda-ast" }
spanda-audit = { path = "../spanda-audit" }
spanda-config = { path = "../spanda-config" }
spanda-readiness = { path = "../spanda-readiness" }
spanda-runtime = { path = "../spanda-runtime" }
spanda-runtime-faults = { path = "../spanda-runtime-faults" }
spanda-trust = { path = "../spanda-trust" }

[dev-dependencies]
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
