[package]
name = "spanda-runtime-faults"
version.workspace = true
edition.workspace = true
description = "Runtime fault detection for memory leaks, crashes, reboots, hangs, and resource exhaustion"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spanda-ast = { path = "../spanda-ast" }
spanda-capability = { path = "../spanda-capability" }
spanda-error = { path = "../spanda-error" }
spanda-readiness = { path = "../spanda-readiness" }
spanda-assurance = { path = "../spanda-assurance" }
spanda-runtime = { path = "../spanda-runtime" }

[dev-dependencies]
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
