[package]
name = "spanda-security"
version = "0.1.0"
edition = "2021"
description = "Security foundation for Spanda — identity, secrets, capabilities, trust, signed messages"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
spanda-audit = { path = "../spanda-audit" }
