[package]
name = "spanda-security"
version = "0.1.0"
edition = "2021"
description = "Security foundation for Spanda — identity, secrets, capabilities, trust, signed messages"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
spanda-audit = { path = "../spanda-audit" }
spanda-config = { path = "../spanda-config" }
spanda-ast = { path = "../spanda-ast" }
spanda-comm = { path = "../spanda-comm" }
spanda-error = { path = "../spanda-error" }
spanda-runtime = { path = "../spanda-runtime" }
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
