[package]
name = "spanda-spoofing"
version.workspace = true
edition.workspace = true
description = "GPS and sensor spoofing detection for Spanda programs and mission traces"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spanda-ast = { path = "../spanda-ast" }
spanda-audit = { path = "../spanda-audit" }
spanda-connectivity = { path = "../spanda-connectivity" }
spanda-runtime = { path = "../spanda-runtime" }
spanda-deploy-http = { path = "../spanda-deploy-http", optional = true }

[features]
default = ["http"]
http = ["dep:spanda-deploy-http"]

[dev-dependencies]
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
