[package]
name = "spanda-typecheck"
version.workspace = true
edition.workspace = true
description = "Spanda physical units algebra and compile-time type system primitives"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
spanda-ast = { path = "../spanda-ast" }
