[package]
name = "synapse-cli"
version = "0.1.0"
edition = "2021"
description = "Synapse native CLI (check / run / sim with JSON output)"

[[bin]]
name = "synapse"
path = "src/main.rs"

[dependencies]
synapse-core = { path = "../synapse-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
