[package]
name = "synapse-node"
version = "0.1.0"
edition = "2021"
description = "Node.js N-API bindings for Synapse core"

[lib]
crate-type = ["cdylib"]

[dependencies]
synapse-core = { path = "../synapse-core" }
napi = { version = "2", features = ["serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"
