[package]
name = "synapse-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for Synapse core"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
synapse-core = { path = "../synapse-core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
